最新の仕様に合わせて実装を修正
